Fixed alignment issues

--- a/style.css
+++ b/style.css
@@ -239,7 +239,7 @@ html {
   }
 
   .name {
-    text-align: center;
+    text-align: left;
     display: flex;
     flex-direction: column;
     align-items: center;
